fix: swapped a method in SnapshotTest, suggested by IntelliJ